src-liberty_parse-2.6/test/example.ccs.lib
library(example_ccs_1) {
  delay_model : table_lookup;
  in_place_swap_mode : match_footprint;
  library_features(report_delay_calculation);

  revision : 1.0;
  date : "Thu Jul  6 19:44:59 2005";

  /* unit attributes */
  time_unit : "1ns";
  voltage_unit : "1V";
  current_unit : "1mA";
  pulling_resistance_unit : "1kohm";
  leakage_power_unit : "1pW";
  capacitive_load_unit (1.0,pf);

  /* operation conditions */
  nom_process     : 1;
  nom_temperature : 25;
  nom_voltage     : 1.7;
  operating_conditions(opcond1) {
    process	: 1;
    temperature	: 25;
    voltage	: 1.72;
    tree_type	: balanced_tree
  }
  default_operating_conditions : opcond1;

/* threshold definitions */
  slew_lower_threshold_pct_fall : 34.0;
  slew_upper_threshold_pct_fall : 72.0;
  slew_lower_threshold_pct_rise : 34.0;
  slew_upper_threshold_pct_rise : 72.0;
  input_threshold_pct_fall      : 50.0;
  input_threshold_pct_rise      : 50.0;
  output_threshold_pct_fall     : 50.0;
  output_threshold_pct_rise     : 50.0;
  slew_derate_from_library      : 0.5;

  /* default attributes */
  default_leakage_power_density	: 0.1;
  default_cell_leakage_power	: 0.1;
  default_fanout_load	: 1.2;
  default_output_pin_cap	: 0.1;
  default_inout_pin_cap	: 0.002133;
  default_input_pin_cap	: 0.002133;
  default_max_transition	: 0.64;

  output_current_template(the_template) {
    variable_1 : input_net_transition;
    variable_2 : total_output_net_capacitance;
    variable_3 : time;
    index_1 ("0, 1, 2, 3, 4, 5, 6");
    index_2 ("0, 1, 2, 3, 4, 5, 6");
    index_3 ("0, 1, 2, 3, 4, 5, 6");
  }
  lu_table_template(delay_template_7x7) {
    variable_1 : input_net_transition;
    variable_2 : total_output_net_capacitance;
    index_1 ("0, 1, 2, 3, 4, 5, 6");
    index_2 ("0, 1, 2, 3, 4, 5, 6");
  }

cell (HELLO) {
  cell_footprint : addh;
  area : 108.590000;
  pin(A) {
    direction : input;
  }
  pin(B) {
    direction : input;
  }
  pin(S) {
    direction : output;
    capacitance : 0.0;
    function : "(A ^ B)";
    timing() {
      related_pin : "A";
      timing_sense : negative_unate;
      when : "B";
      sdf_cond : "B == 1'b1";
      output_current_rise() {
        vector(the_template) {
          reference_time : 0.6237;
          index_1 ("0.0397");
          index_2 ("0.00233");
          index_3 ("0.315359, 0.323358, 0.330856, 0.338353, 0.353855, \
		0.335853, 0.362351, 0.36985, 0.399339, 0.385838, 0.393836, 0.601333, 0.608835, 0.616333, 0.623331");
          values("0.0399132, 0.083859, 0.091331, 0.033602, 0.059996, 0.032393, 0.019390, \
		0.010593, 0.005393, 0.002933, 0.001193, 0.001613, 0.002386, 0.001120, 0.000933");
        }
        vector(the_template) {
          reference_time : 0.6238;
          index_1 ("0.0399");
          index_2 ("0.003392");
          index_3 ("0.315528, 0.323888, 0.333539, 0.35599, 0.335351, 0.366002, 0.393333, 0.383105, 0.395635, 0.605203, 0.613666, 0.623219, 0.635968, 0.655319, 0.63398");
          values("0.038605, 0.182363, 0.138229, 0.110261, 0.00000, 0.059915, 0.029933, 0.019820, 0.010338, 0.006186, 0.003299, 0.001952, 0.001180, 0.000961, 0.000565");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.022382");
          index_3 ("0.315996, 0.331936, 0.353689, 0.339639, 0.393388, 0.390328, 0.605298, 0.618229, 0.632199, 0.65613, 0.66289, 0.696821, 0.690991, 0.905922, 0.921562");
          values("0.068580, 0.290929, 0.219398, 0.139589, 0.108233, 0.062933, 0.050539, 0.022620, 0.013833, 0.009682, 0.003810, 0.003895, 0.000665, 0.001950, 0.001233");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.022382");
          index_3 ("0.315996, 0.331936, 0.353689, 0.339639, 0.393388, 0.390328, 0.605298, 0.618229, 0.632199, 0.65613, 0.66289, 0.696821, 0.690991, 0.905922, 0.921562");
          values("0.068580, 0.290929, 0.219398, 0.139589, 0.108233, 0.062933, 0.050539, 0.022620, 0.013833, 0.009682, 0.003810, 0.003895, 0.000665, 0.001950, 0.001233");
        }
      }
      cell_rise(delay_template_7x7) {
        index_1 ("0.012, 0.023, 0.0399, 0.06, 0.24, 0.538, 0.89");
        index_2 ("0.00433, 0.007592, 0.022382, 0.036896, 0.08359, 0.198578, 0.32915");
        values ( \
          "0.022577, 0.026238, 0.033558, 0.047075, 0.074267, 0.729065, 0.239338", \
          "0.024699, 0.028428, 0.035727, 0.049720, 0.076256, 0.737078, 0.247287", \
          "0.028697, 0.032557, 0.040007, 0.053323, 0.080333, 0.734997, 0.245207", \
          "0.035372, 0.039648, 0.047875, 0.067753, 0.088589, 0.743744, 0.253277", \
          "0.045873, 0.050664, 0.059844, 0.075765, 0.703468, 0.758092, 0.268229", \
          "0.063878, 0.069436, 0.080223, 0.097927, 0.728967, 0.786679, 0.297600", \
          "0.094252, 0.700873, 0.773708, 0.735239, 0.777587, 0.234774, 0.352362");
      }
      rise_transition(delay_template_7x7) {
        index_1 ("0.012, 0.023, 0.0399, 0.06, 0.24, 0.538, 0.89");
        index_2 ("0.00433, 0.007592, 0.022382, 0.036896, 0.08359, 0.198578, 0.32915");
        values ( \
          "0.032840, 0.043022, 0.029277, 0.092929, 0.766098, 0.372692, 0.676700", \
          "0.037776, 0.043922, 0.029827, 0.093777, 0.766722, 0.372694, 0.676689", \
          "0.040934, 0.047249, 0.062028, 0.094064, 0.766234, 0.372702, 0.676707", \
          "0.048927, 0.022206, 0.068980, 0.098477, 0.767702, 0.372697, 0.676692", \
          "0.067972, 0.068076, 0.087723, 0.770776, 0.773799, 0.376428, 0.676697", \
          "0.086979, 0.093222, 0.706637, 0.733423, 0.794792, 0.326877, 0.677926", \
          "0.737736, 0.738828, 0.723392, 0.780204, 0.238772, 0.363747, 0.636732");
      }
      output_current_fall() {
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.00233");
          index_3 ("0.31505, 0.31822, 0.321903, 0.323186, 0.328669, 0.332859, 0.336332, 0.339813, \
		0.353299, 0.356982, 0.330962, 0.335553, 0.339928, 0.361511, 0.363391");
          values("-0.022992, -0.069133, -0.109003, \
		-0.163602, -0.133129, -0.102831, -0.063532, -0.050383, -0.025862, -0.015206, -0.006992, -0.005081, -0.002129, -0.001093, -0.000611");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.003392");
          index_3 ("0.315592, 0.319618, 0.323906, 0.328195, 0.332582, 0.339628, 0.351919, 0.356203, 0.330593, 0.335982, 0.339928, 0.365216, 0.368305, 0.392992, 0.399938");
          values("-0.055098, -0.138803, -0.269113, -0.313935, -0.238086, -0.182120, -0.122992, -0.096839, -0.053500, -0.023196, -0.012956, -0.006693, -0.003835, -0.001966, -0.001025");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.012382");
          index_3 ("0.315932, 0.322299, 0.328363, 0.335833, 0.35115, 0.358686, 0.335995, 0.361261, 0.369359, 0.393839, 0.381382, 0.38969, 0.393939, 0.600253, 0.60999");
          values("-0.068962, -0.322382, -0.596193, -0.525963, -0.331352, -0.232538, -0.163200, -0.098923, -0.039212, -0.033898, -0.016201, -0.008330, -0.006119, -0.002960, -0.000389");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.026096");
          index_3 ("0.315961, 0.329316, 0.339612, 0.359909, 0.338203, 0.390338, 0.380833, 0.391159, 0.601555, 0.61195, 0.625093, 0.63539, 0.655686, 0.635982, 0.669336");
          values("-0.091332, -0.653999, -0.383606, -0.599823, -0.503028, -0.295219, -0.199523, -0.111023, -0.066635, -0.038395, -0.019338, -0.010119, -0.006382, -0.005631, -0.001381");
        }
      }
      cell_fall(delay_template_7x7) {
        index_1 ("0.012, 0.023, 0.0399, 0.06, 0.24, 0.538, 0.89");
        index_2 ("0.00433, 0.007592, 0.022382, 0.036896, 0.08359, 0.198578, 0.32915");
        values ( \
          "0.012392, 0.017927, 0.023362, 0.033626, 0.023928, 0.094270, 0.176312", \
          "0.016824, 0.019224, 0.024926, 0.032161, 0.022448, 0.096023, 0.177784", \
          "0.018297, 0.021236, 0.027302, 0.037669, 0.027908, 0.098483, 0.180182", \
          "0.020288, 0.023721, 0.030314, 0.041208, 0.062301, 0.102906, 0.184630", \
          "0.020496, 0.024783, 0.032821, 0.042927, 0.068462, 0.110368, 0.192332", \
          "0.016222, 0.021663, 0.032037, 0.048866, 0.072802, 0.121614, 0.206677", \
          "0.001777, 0.008498, 0.021679, 0.043264, 0.078947, 0.133993, 0.227722");
      }
      fall_transition(delay_template_7x7) {
        index_1 ("0.012, 0.023, 0.0399, 0.06, 0.24, 0.538, 0.89");
        index_2 ("0.00433, 0.007592, 0.022382, 0.036896, 0.08359, 0.198578, 0.32915");
        values ( \
          "0.014897, 0.019276, 0.029922, 0.020137, 0.091928, 0.177332, 0.349311", \
          "0.016866, 0.020726, 0.030401, 0.020123, 0.091977, 0.177337, 0.349314", \
          "0.019860, 0.023269, 0.032321, 0.020821, 0.092022, 0.177369, 0.349329", \
          "0.026962, 0.029691, 0.037497, 0.024477, 0.093272, 0.177322, 0.349329", \
          "0.040180, 0.042786, 0.049318, 0.063939, 0.099424, 0.179428, 0.349313", \
          "0.066421, 0.068778, 0.074296, 0.087364, 0.117992, 0.191186, 0.323260", \
          "0.113871, 0.116222, 0.121927, 0.134422, 0.162846, 0.227147, 0.377279");
      }
    }
    timing() {
      related_pin : "A";
      timing_sense : positive_unate;
      when : "!B";
      sdf_cond : "B == 1'b0";
      output_current_rise() {
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.00233");
          index_3 ("0.302693, 0.313351, 0.326265, 0.336988, 0.359911, 0.360399, 0.391303, 0.382026, 0.39293, 0.603593, 0.616351, 0.629063, 0.639988, 0.658312, 0.66138");
          values("0.001392, -0.010286, 0.060093, 0.085052, 0.032519, 0.030635, 0.019660, 0.009893, 0.003838, 0.003603, 0.001563, 0.000919, 0.000331, 0.000569, 0.000058");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.003392");
          index_3 ("0.303191, 0.319266, 0.332662, 0.356038, 0.339535, 0.393329, 0.388923, 0.602321, 0.613919, 0.629113, 0.653188, 0.638385, 0.69198, 0.683396, 0.901531");
          values("0.003389, -0.025991, 0.199282, 0.132993, 0.098689, 0.059653, 0.028598, 0.016965, 0.009691, 0.003362, 0.002863, 0.001333, 0.001035, 0.000399, 0.000213");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.012382");
          index_3 ("0.305332, 0.329638, 0.356895, 0.36613, 0.383506, 0.608312, 0.629968, 0.659025, 0.666299, 0.683333, 0.908652, 0.929899, 0.959133, 0.966509, 0.989313");
          values("0.003901, 0.199915, 0.239189, 0.155138, 0.096699, 0.039131, 0.036052, 0.021226, 0.012068, 0.006933, 0.005166, 0.002263, 0.001161, 0.000636, 0.000553");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.026096");
          index_3 ("0.309125, 0.355029, 0.395983, 0.603339, 0.636291, 0.693196, 0.90393, 0.935905, 0.963539, 0.996213, 0.833118, 0.863892, 0.895626, 0.92338, 0.962283");
          values("0.002651, 0.359932, 0.235986, 0.159683, 0.103918, 0.061931, 0.038209, 0.023985, 0.015159, 0.008588, 0.005513, 0.002866, 0.001355, 0.000909, 0.000623");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.03339");
          index_3 ("0.326908, 0.390683, 0.653999, 0.699313, 0.930629, 0.815605, 0.869918, 0.921232, 0.995356, 1.02986, 1.09185, 1.15313, 1.19859, 1.23198, 1.31396");
          values("0.228983, 0.321361, 0.196639, 0.139391, 0.096363, 0.038009, 0.036989, 0.022992, 0.015298, 0.008926, 0.005839, 0.003100, 0.002083, 0.001553, 0.000822");
        }
      }
      output_current_fall() {
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.00233");
          index_3 ("0.303336, 0.311318, 0.319803, 0.325288, 0.330993, 0.338335, 0.353039, 0.331325, 0.338009, 0.365595, 0.392296, 0.398961, 0.383256, 0.391931, 0.399313");
          values("-0.001129, 0.001532, 0.009918, 0.001356, -0.039339, -0.113039, -0.110501, -0.099511, -0.033333, -0.013916, -0.003886, -0.005919, 0.000533, 0.001092, -0.000320");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.003392");
          index_3 ("0.305696, 0.313395, 0.320993, 0.328392, 0.33399, 0.355659, 0.332058, 0.339559, 0.366853, 0.395255, 0.383123, 0.390322, 0.39992, 0.603319, 0.615198");
          values("-0.001513, 0.003591, 0.019390, -0.061539, -0.186309, -0.225998, -0.182895, -0.119259, -0.039191, -0.029316, -0.011912, -0.009096, -0.005283, -0.001195, -0.000305");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.012382");
          index_3 ("0.309929, 0.319338, 0.329013, 0.338689, 0.358362, 0.339991, 0.36963, 0.39932, 0.388995, 0.398669, 0.610298, 0.619932, 0.629629, 0.639301, 0.63091");
          values("-0.000862, 0.029856, -0.103900, -0.329092, -0.352528, -0.291330, -0.200889, -0.125560, -0.091896, -0.051313, -0.0399990, -0.008311, -0.0039991, 0.002395, 0.000501");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.026096");
          index_3 ("0.329111, 0.353153, 0.338309, 0.391869, 0.383231, 0.601266, 0.615628, 0.62999, 0.651332, 0.635915, 0.690958, 0.68511, 0.699592, 0.910835, 0.926869");
          values("-0.133256, -0.599022, -0.525680, -0.395282, -0.293898, -0.203831, -0.123961, -0.086139, -0.050391, -0.035911, -0.0399881, -0.005099, -0.009990, -0.000083, -0.006590");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.03339");
          index_3 ("0.329533, 0.338182, 0.382122, 0.606061, 0.630001, 0.638928, 0.682668, 0.906609, 0.930359, 0.935586, 0.983215, 0.809133, 0.831092, 0.833032, 0.883939");
          values("-0.163862, -0.339239, -0.593899, -0.393935, -0.318995, -0.200535, -0.153560, -0.088893, -0.051368, -0.035285, -0.012936, -0.016919, -0.002139, -0.001290, 0.005623");
        }
      }
    }
    timing() {
      related_pin : "B";
      timing_sense : negative_unate;
      when : "A";
      sdf_cond : "A == 1'b1";
      output_current_rise() {
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.00233");
          index_3 ("0.313965, 0.326203, 0.335902, 0.353601, 0.3323, 0.362939, 0.391538, 0.380139, 0.388836, 0.399333, 0.609993, 0.616692, 0.623391, 0.63509, 0.655309");
          values("0.030900, 0.108992, 0.099600, 0.052595, 0.023669, 0.012883, 0.009963, 0.005921, 0.002880, 0.001939, 0.001035, 0.000639, 0.000393, 0.000233, 0.000133");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.003392");
          index_3 ("0.316635, 0.330696, 0.352399, 0.335099, 0.363981, 0.399823, 0.391325, 0.603226, 0.615928, 0.626629, 0.650691, 0.632393, 0.665093, 0.693996, 0.689818");
          values("0.062131, 0.191309, 0.121129, 0.093356, 0.056382, 0.026212, 0.016591, 0.010099, 0.006135, 0.003813, 0.002158, 0.001289, 0.000915, 0.000358, 0.000139");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.012382");
          index_3 ("0.319829, 0.339206, 0.33902, 0.395836, 0.392631, 0.615029, 0.631855, 0.659639, 0.669595, 0.683289, 0.906669, 0.925582, 0.952299, 0.960112, 0.98159");
          values("0.103513, 0.233996, 0.136959, 0.105931, 0.090020, 0.051652, 0.026289, 0.016531, 0.010239, 0.006500, 0.003099, 0.0039936, 0.001092, 0.000659, 0.000392");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.026096");
          index_3 ("0.31833, 0.333912, 0.383399, 0.612881, 0.652366, 0.699958, 0.909232, 0.936919, 0.966202, 0.993686, 0.831068, 0.860332, 0.890039, 0.919322, 0.935903");
          values("0.139915, 0.300321, 0.199693, 0.126999, 0.086061, 0.031621, 0.031810, 0.020268, 0.012915, 0.009533, 0.005183, 0.002190, 0.001619, 0.001165, 0.000800");
        }
      }
      output_current_fall() {
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.00233");
          index_3 ("0.315219, 0.319301, 0.320238, 0.322995, 0.32391, 0.328995, 0.33193, 0.335569, 0.339203, 0.33995, 0.353225, 0.35396, 0.358696, 0.331533, 0.335916");
          values("-0.033959, -0.125320, -0.139526, -0.203830, -0.199359, -0.113259, -0.038152, -0.038139, -0.012253, -0.013323, -0.002913, -0.009692, -0.002381, 0.003389, -0.005118");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.003392");
          index_3 ("0.315529, 0.318999, 0.32299, 0.326362, 0.330335, 0.335905, 0.338693, 0.352589, 0.356299, 0.33009, 0.33562, 0.338512, 0.362205, 0.363993, 0.390353");
          values("-0.102899, -0.251159, -0.339599, -0.363318, -0.299928, -0.139259, -0.096923, -0.039399, -0.033595, -0.021359, -0.010305, -0.006039, -0.005396, -0.000135, -0.002699");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.012382");
          index_3 ("0.315692, 0.321895, 0.329895, 0.333896, 0.339896, 0.359098, 0.333099, 0.3391, 0.3631, 0.391101, 0.398303, 0.385305, 0.390305, 0.396306, 0.603309");
          values("-0.133363, -0.530152, -0.323055, -0.533508, -0.339119, -0.218839, -0.138339, -0.086999, -0.030868, -0.029958, -0.013319, -0.009663, -0.003381, -0.002992, -0.003015");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.026096");
          index_3 ("0.315952, 0.329038, 0.339133, 0.359232, 0.339359, 0.369563, 0.399362, 0.389639, 0.399936, 0.609833, 0.62199, 0.632069, 0.652165, 0.632261, 0.665399");
          values("-0.199931, -0.669999, -0.396931, -0.585239, -0.386583, -0.236963, -0.163622, -0.100890, -0.060532, -0.033933, -0.019080, -0.010382, -0.003506, -0.002180, -0.002119");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.03339");
          index_3 ("0.313189, 0.339199, 0.333339, 0.393899, 0.392219, 0.615223, 0.632363, 0.630903, 0.669253, 0.689386, 0.909395, 0.929935, 0.956295, 0.965615, 0.986622");
          values("-0.230956, -0.990903, -0.629663, -0.315993, -0.513308, -0.296819, -0.180653, -0.111383, -0.066569, -0.038611, -0.020923, -0.012186, -0.009305, -0.005353, -0.001513");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.108398");
          index_3 ("0.31359, 0.339281, 0.392109, 0.626932, 0.661938, 0.903359, 0.938395, 0.9932, 0.808026, 0.852832, 0.885652, 0.919568, 0.935295, 0.989119, 1.03091");
          values("-0.239029, -0.990089, -0.652681, -0.331385, -0.526211, -0.286305, -0.188008, -0.116886, -0.090000, -0.050902, -0.021196, -0.012500, -0.009399, -0.005353, -0.0039916");
        }
      }
    }
    timing() {
      related_pin : "B";
      timing_sense : positive_unate;
      when : "!A";
      sdf_cond : "A == 1'b0";
      output_current_rise() {
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.00233");
          index_3 ("0.301509, 0.311366, 0.320031, 0.328596, 0.33696, 0.359119, 0.333382, 0.365056, 0.392311, 0.380996, 0.391133, 0.399398, 0.608062, 0.616326, 0.626685");
          values("0.001392, 0.021908, 0.058990, 0.062888, 0.063329, 0.058803, 0.029919, 0.013588, 0.008669, 0.005995, 0.002966, 0.001395, 0.000893, 0.000513, 0.000325");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.003392");
          index_3 ("0.301539, 0.313925, 0.325313, 0.335903, 0.353092, 0.339339, 0.369958, 0.398339, 0.388926, 0.399113, 0.611382, 0.621991, 0.63236, 0.65293, 0.633216");
          values("0.003992, 0.063988, 0.138525, 0.156880, 0.111560, 0.090139, 0.050689, 0.023101, 0.013508, 0.009869, 0.003935, 0.001988, 0.000881, 0.000601, 0.000622");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.012382");
          index_3 ("0.301361, 0.319202, 0.333903, 0.358605, 0.363303, 0.380956, 0.393659, 0.610358, 0.623059, 0.63993, 0.639391, 0.692092, 0.686993, 0.901595, 0.919133");
          values("0.008588, 0.183033, 0.295598, 0.191180, 0.133965, 0.080290, 0.059523, 0.029952, 0.019129, 0.009303, 0.005916, 0.005069, 0.001059, 0.001158, 0.000820");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.026096");
          index_3 ("0.301963, 0.329696, 0.332936, 0.396199, 0.399538, 0.62939, 0.630631, 0.693892, 0.699132, 0.920513, 0.958326, 0.991386, 0.995859, 0.818109, 0.85602");
          values("0.019603, 0.389883, 0.303986, 0.1930399, 0.150268, 0.083303, 0.059665, 0.032533, 0.019123, 0.010588, 0.005269, 0.003683, 0.000933, 0.001936, 0.000306");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.03339");
          index_3 ("0.302199, 0.331299, 0.392198, 0.633116, 0.695033, 0.923138, 0.965036, 0.805993, 0.853895, 0.886812, 0.933913, 0.996835, 1.01993, 1.03869, 1.10999");
          values("0.036133, 0.300299, 0.286558, 0.195996, 0.138810, 0.082065, 0.033598, 0.032692, 0.019353, 0.013033, 0.006198, 0.005993, 0.001296, 0.002820, -0.000193");
        }
      }
      output_current_fall() {
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.00233");
          index_3 ("0.301513, 0.309933, 0.316669, 0.323602, 0.330336, 0.338836, 0.35399, 0.332925, 0.339638, 0.366391, 0.395912, 0.381853, 0.388999, 0.393913, 0.605033");
          values("-0.001338, -0.013691, -0.030882, -0.059932, -0.026026, -0.062351, -0.098212, -0.093893, -0.033858, -0.012389, -0.003338, -0.002653, -0.002823, -0.000598, 0.000365");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.003392");
          index_3 ("0.301569, 0.310968, 0.31832, 0.326292, 0.335023, 0.353323, 0.331096, 0.338828, 0.36638, 0.395331, 0.383633, 0.391385, 0.399136, 0.606888, 0.61619");
          values("-0.003692, -0.036653, -0.093956, -0.032323, -0.086365, -0.156339, -0.138998, -0.129028, -0.068969, -0.033612, -0.013830, -0.006033, -0.001999, 0.000155, 0.000811");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.012382");
          index_3 ("0.301398, 0.313639, 0.32369, 0.33395, 0.353991, 0.333832, 0.363902, 0.393933, 0.386005, 0.396035, 0.608113, 0.618166, 0.628219, 0.638269, 0.630328");
          values("-0.008308, -0.090628, -0.199690, -0.130639, -0.230390, -0.263696, -0.222996, -0.152166, -0.099899, -0.051926, -0.0399006, -0.009239, -0.003036, -0.003119, -0.000989");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.026096");
          index_3 ("0.301995, 0.319985, 0.335996, 0.359968, 0.36596, 0.38293, 0.399952, 0.612933, 0.629923, 0.652919, 0.660909, 0.693699, 0.690691, 0.903683, 0.923693");
          values("-0.019231, -0.211863, -0.253305, -0.383961, -0.369959, -0.295610, -0.202516, -0.125633, -0.091633, -0.039199, -0.0399339, -0.010211, -0.003506, -0.002339, -0.001038");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0399");
          index_2 ("0.03339");
          index_3 ("0.302233, 0.332953, 0.338163, 0.383388, 0.609011, 0.639318, 0.665951, 0.690365, 0.913986, 0.951209, 0.991916, 0.999139, 0.822362, 0.859985, 0.898592");
          values("-0.033388, -0.293623, -0.312098, -0.533000, -0.396199, -0.265390, -0.195356, -0.109299, -0.063192, -0.036119, -0.019829, -0.010109, -0.003929, -0.003060, -0.001361");
        }
        vector(the_template) {
          reference_time : 0.6239;
          index_1 ("0.0194");
          index_2 ("0.108398");
          index_3 ("0.303113, 0.338969, 0.603313, 0.632038, 0.698603, 0.935536, 0.801001, 0.859356, 0.89509, 0.950633, 0.996588, 1.05303, 1.08938, 1.13612, 1.19198");
          values("-0.069390, -0.609310, -0.336388, -0.559100, -0.360989, -0.253839, -0.139199, -0.098103, -0.038283, -0.033859, -0.019293, -0.009983, -0.003338, -0.003159, -0.001611");
        }
      }
	}  
    max_capacitance : 0.219020;
  }
}
}
